--- a/index.html
+++ b/index.html
@@ -19,30 +19,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- #SECTION NAVBAR -->
-    <nav class="navbar navbar-expand fixed-top bg-transparent mx-lg-5">
-      <div class="container-fluid">
-        <a href="#" class="navbar-brand d-block d-md-none font-weight-bold ms-3"
-          ><span class="display-2 font-weight-bold brand-mobile">LB</span></a
-        >
-        <a href="#" class="navbar-brand d-none d-md-block"
-          ><span class="display-4 brand-large ms-2">La Boulangerie</span></a
-        >
-        <ul class="navbar-nav me-1 pe-2">
-          <li class="nav-item">
-            <a href="#" class="nav-link fs-6">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link fs-6">Locations</a>
-          </li>
-          <li class="nav-item order-now">
-            <a href="#" class="nav-link fs-6">Order Now</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- #!SECTION END NAVBAR -->
+    <!-- #SECTION HERO SECTION -->
     <section class="hero">
+      <!-- #SECTION NAVBAR -->
+      <nav class="navbar navbar-expand bg-transparent mx-lg-5">
+        <div class="container-fluid">
+          <a
+            href="#"
+            class="navbar-brand d-block d-md-none font-weight-bold ms-3"
+            ><span class="display-2 font-weight-bold brand-mobile">LB</span></a
+          >
+          <a href="#" class="navbar-brand d-none d-md-block"
+            ><span class="display-4 brand-large ms-2">La Boulangerie</span></a
+          >
+          <ul class="navbar-nav me-1 pe-2">
+            <li class="nav-item">
+              <a href="#" class="nav-link fs-6">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link fs-6">Locations</a>
+            </li>
+            <li class="nav-item order-now">
+              <a href="#" class="nav-link fs-6">Order Now</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- !SECTION END NAVBAR -->
       <div class="hero-text">
         <h1 class="text-center text-white-50 display-3">
           BOU<span class="text-white">LA</span>NGERIE
@@ -50,7 +53,175 @@
         <h2 class="text-center text-white display-4">French Bakery</h2>
       </div>
     </section>
-
+    <!-- !SECTION END HERO -->
+    <!-- #SECTION ABOUT SECTION -->
+    <section class="about">
+      <div class="container-fluid">
+        <div class="row my-4">
+          <h1 class="text-center display-5">Made With Care</h1>
+        </div>
+        <div class="row m-2">
+          <div class="col-12 col-md-6 order-md-2 text-center">
+            <img
+              src="assets/img/about-1.jpg"
+              class="img-fluid w-md-50 w-75 rounded-3"
+              alt="Image of Food"
+            />
+            <p class="text-break mt-2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem tempora porro perspiciatis, aperiam ratione doloremque
+              numquam repellat quia optio maiores? Officiis voluptatum
+              doloremque maiores, hic recusandae omnis tenetur ad beatae
+              aspernatur dolore quo quibusdam doloribus quos at ullam ipsam!
+              Excepturi quasi dolorem dolor ducimus deleniti?
+            </p>
+          </div>
+          <div class="col-12 col-md-6 order-md-1 text-center">
+            <img
+              src="assets/img/about-2.jpg"
+              class="img-fluid w-md-50 w-75 rounded-3"
+              alt="Image of Food"
+            />
+            <p class="text-break mt-2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem tempora porro perspiciatis, aperiam ratione doloremque
+              numquam repellat quia optio maiores? Officiis voluptatum
+              doloremque maiores, hic recusandae omnis tenetur ad beatae
+              aspernatur dolore quo quibusdam doloribus quos at ullam ipsam!
+              Excepturi quasi dolorem dolor ducimus deleniti?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- !SECTION END ABOUT -->
+    <!-- #SECTION DAILY SPECIALS -->
+    <section class="daily-specials pt-3 bg-light">
+      <div class="container-fluid">
+        <div class="row my-4">
+          <h1 class="text-center display-5">Daily Specials</h1>
+        </div>
+        <div class="row">
+          <div class="col-9 col-md-6 mx-auto">
+            <div
+              id="carouselExampleCaptions"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="assets/img/carousel-1.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Monday</h5>
+                    <p>
+                      Nulla vitae elit libero, a pharetra augue mollis interdum.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/img/carousel-2.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Tuesday</h5>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/img/carousel-3.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Wednesday</h5>
+                    <p>
+                      Praesent commodo cursus magna, vel scelerisque nisl
+                      consectetur.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/img/carousel-4.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Thursday</h5>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/img/carousel-5.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Friday</h5>
+                    <p>
+                      Nulla vitae elit libero, a pharetra augue mollis interdum.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/img/carousel-6.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="Image of Food"
+                  />
+                  <div class="carousel-caption">
+                    <h5>Saturday & Sunday</h5>
+                    <p>
+                      Praesent commodo cursus magna, vel scelerisque nisl
+                      consectetur.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleCaptions"
+                role="button"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleCaptions"
+                role="button"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- !SECTION END DAILY SPECIALS -->
+    <!-- #SECTION ORDER NOW  -->
+    <!-- !SECTION END ORDER NOW -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
