order now banner done

--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
     </section>
     <!-- !SECTION END DAILY SPECIALS -->
     <!-- #SECTION ORDER NOW  -->
+    <section class="order-now">
+      <div class="order-now-text text-white display-3">
+        <h2>ORDER ONLINE</h2>
+        <h2>PICKUP OR DELIVERY</h2>
+      </div>
+      <a href="#" class="btn btn-dark order-btn">Order Now</a>
+    </section>
     <!-- !SECTION END ORDER NOW -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
