--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="nav-item">
               <a href="#" class="nav-link fs-6">Locations</a>
             </li>
-            <li class="nav-item order-now">
+            <li class="nav-item nav-order-btn">
               <a href="#" class="nav-link fs-6">Order Now</a>
             </li>
           </ul>
@@ -58,7 +58,7 @@
     <section class="about">
       <div class="container-fluid">
         <div class="row my-4">
-          <h1 class="text-center display-5">Made With Care</h1>
+          <h1 class="text-center display-4">Made With Care</h1>
         </div>
         <div class="row m-2">
           <div class="col-12 col-md-6 order-md-2 text-center">
@@ -99,7 +99,7 @@
     <section class="daily-specials pt-3 bg-light">
       <div class="container-fluid">
         <div class="row my-4">
-          <h1 class="text-center display-5">Daily Specials</h1>
+          <h1 class="text-center display-4">Daily Specials</h1>
         </div>
         <div class="row">
           <div class="col-9 col-md-6 mx-auto">
@@ -222,13 +222,64 @@
     <!-- !SECTION END DAILY SPECIALS -->
     <!-- #SECTION ORDER NOW  -->
     <section class="order-now">
-      <div class="order-now-text text-white display-3">
+      <div class="order-now-text text-white display-3 mx-lg-5">
         <h2>ORDER ONLINE</h2>
         <h2>PICKUP OR DELIVERY</h2>
       </div>
       <a href="#" class="btn btn-dark order-btn">Order Now</a>
     </section>
     <!-- !SECTION END ORDER NOW -->
+    <!-- #SECTION CONTACT -->
+    <section class="contact mb-5">
+      <div class="container-fluid">
+        <div class="row my-4">
+          <h1 class="text-center display-4">Contact Us</h1>
+        </div>
+        <div class="row mt-4">
+          <h2 class="text-center h1">Hours</h2>
+          <p class="text-center h5">Monday - Friday: 5:00a - 3:00p</p>
+          <p class="text-center h5">Saturday: 7:00a - 3:00p</p>
+          <p class="text-center h5">Saturday: 8:00a - 2:00p</p>
+        </div>
+        <div class="row mt-3">
+          <h2 class="text-center h1">Phone</h2>
+          <p class="text-center h5">(555)123-4567</p>
+        </div>
+        <div class="row mt-3">
+          <a href="#" class="btn btn-danger contact-btn mx-auto w-25"
+            >Get in Touch!</a
+          >
+        </div>
+      </div>
+    </section>
+    <!-- !SECTION END CONTACT -->
+    <!-- #SECTION SOCIAL -->
+    <section class="social bg-light pt-3 mb-4">
+      <div class="container-fluid">
+        <div class="row mt-4">
+          <h1 class="text-center display-4">Social</h1>
+        </div>
+        <div class="row">
+          <div class="social-links col-12 text-center">
+            <a href="#" class="me-1"><i class="fab fa-3x fa-facebook"></i></a>
+            <a href="#" class="mx-2"><i class="fab fa-3x fa-instagram"></i></a>
+            <a href="#" class="mx-2"><i class="fab fa-3x fa-twitter"></i></a>
+            <a href="#" class="ms-0"><i class="fab fa-3x fa-snapchat"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- !SECTION END SOCIAL -->
+    <!-- #SECTION FOOTER -->
+    <footer class="bg-dark text-white pt-3 pb-1">
+      <div class="container-fluid">
+        <p class="small text-center">
+          Copyright &#169; 2020 La Boulangerie - All Rights Reserved
+        </p>
+      </div>
+    </footer>
+    <!-- !SECTION END FOOTER -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
