all pages added, just need content for last 2

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
       <nav class="navbar navbar-expand bg-transparent mx-lg-5">
         <div class="container-fluid">
           <a
-            href="#"
+            href="index.html"
             class="navbar-brand d-block d-md-none font-weight-bold ms-3"
             ><span class="display-2 font-weight-bold brand-mobile">LB</span></a
           >
-          <a href="#" class="navbar-brand d-none d-md-block"
+          <a href="index.html" class="navbar-brand d-none d-md-block"
             ><span class="display-4 brand-large ms-2">La Boulangerie</span></a
           >
           <ul class="navbar-nav me-1 pe-2">
             <li class="nav-item">
-              <a href="#" class="nav-link fs-6">Menu</a>
+              <a href="menu.html" class="nav-link fs-6">Menu</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link fs-6">Locations</a>
+              <a href="locations.html" class="nav-link fs-6">Locations</a>
             </li>
             <li class="nav-item nav-order-btn">
-              <a href="#" class="nav-link fs-6">Order Now</a>
+              <a href="ordernow.html" class="nav-link fs-6">Order Now</a>
             </li>
           </ul>
         </div>
@@ -221,9 +221,9 @@
     </section>
     <!-- !SECTION END DAILY SPECIALS -->
     <!-- #SECTION ORDER NOW  -->
-    <section class="order-now">
+    <section class="order-now-banner">
       <div class="order-now-text text-white display-3 mx-lg-5">
-        <h2>ORDER ONLINE</h2>
+        <h2>ORDER ONLINE -</h2>
         <h2>PICKUP OR DELIVERY</h2>
       </div>
       <a href="#" class="btn btn-dark order-btn">Order Now</a>
