--- a/menu.html
+++ b/menu.html
@@ -22,21 +22,23 @@
     <!-- #SECTION NAVBAR -->
     <nav class="navbar navbar-expand bg-dark px-lg-5">
       <div class="container-fluid">
-        <a href="#" class="navbar-brand d-block d-md-none font-weight-bold ms-3"
+        <a
+          href="index.html"
+          class="navbar-brand d-block d-md-none font-weight-bold ms-3"
           ><span class="display-2 font-weight-bold brand-mobile">LB</span></a
         >
-        <a href="#" class="navbar-brand d-none d-md-block"
+        <a href="index.html" class="navbar-brand d-none d-md-block"
           ><span class="display-4 brand-large ms-2">La Boulangerie</span></a
         >
         <ul class="navbar-nav me-1 pe-2">
           <li class="nav-item">
-            <a href="#" class="nav-link fs-6">Menu</a>
+            <a href="menu.html" class="nav-link fs-6">Menu</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link fs-6">Locations</a>
+            <a href="locations.html" class="nav-link fs-6">Locations</a>
           </li>
           <li class="nav-item nav-order-btn">
-            <a href="#" class="nav-link fs-6">Order Now</a>
+            <a href="ordernow.html" class="nav-link fs-6">Order Now</a>
           </li>
         </ul>
       </div>
