--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <p class="text-center h5">(555)123-4567</p>
         </div>
         <div class="row mt-3">
-          <a href="#" class="btn btn-danger contact-btn mx-auto w-25"
+          <a href="#" class="btn btn-danger contact-btn mx-auto w-auto"
             >Get in Touch!</a
           >
         </div>
