--- a/locations.html
+++ b/locations.html
@@ -45,10 +45,33 @@
     </nav>
     <!-- !SECTION END NAVBAR -->
     <!-- #SECTION MAIN CONTENT -->
-    <section class="locations">
+    <section class="locations" style="min-height: 83vh">
       <div class="container-fluid">
         <div class="row my-4">
           <h1 class="text-center display-4">Locations</h1>
+        </div>
+        <div class="row my-3">
+          <div class="col-12 mx-auto text-center">
+            <h4>La Boulangerie - Downtown</h4>
+            <p>
+              555 West Main Street <br />
+              Seattle, WA 98104
+            </p>
+          </div>
+          <div class="col-12 mt-2 mx-auto text-center">
+            <h4>La Boulangerie - University</h4>
+            <p>
+              123 NE Campus Boulevard <br />
+              Seattle, WA 98105
+            </p>
+          </div>
+          <div class="col-12 mt-2 mx-auto text-center">
+            <h4>La Boulangerie - Airport</h4>
+            <p>
+              11245 Air Cargo Road <br />
+              SeaTac, WA 98158
+            </p>
+          </div>
         </div>
       </div>
     </section>
