--- a/ordernow.html
+++ b/ordernow.html
@@ -45,7 +45,7 @@
     </nav>
     <!-- !SECTION END NAVBAR -->
     <!-- #SECTION MAIN CONTENT -->
-    <section class="order-now-main">
+    <section class="order-now-main" style="min-height: 83vh">
       <div class="container-fluid">
         <div class="row my-4">
           <h1 class="text-center display-4">Order Now</h1>
